[package]
name = "BAW-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
propelauth = { version = "0.23.4", features = ["axum08"] }
rustemon = { version = "4.5.0", features = ["serialize"] }
serde = "1.0.228"
serde_json = "1.0.149"
tcgdex_api = "0.1.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
